# EASRL-LM-2D-IKB

./: .gitignore  .gitmodules  README.md  action_correlation_supervised.ipynb  c2c.sh  create_complete_dataset.sh  events.out.tfevents.1690955249.nrgpu2.1222781.0  jaspers_notebook.ipynb  main.py  main_inference.py  main_ppo.py  main_sac.py  main_train_vae.py  port_forwarding.sh  pyproject.toml  requirements.txt  run_experiment.sh  test_ppo.py  test_sac.py
algorithms/: buffer.py  distributions.py  helper.py  policy_net.py  q_net.py  sac.py
algorithms/common/: distributions.py
algorithms/ddpg/: ddpg.py  helper.py  mu_net.py  noise.py  q_net.py  replay_buffer.py
algorithms/helper/: plot.py
algorithms/ppo/: buffer.py  model.py  ppo.py
config/: base_ddpg.yaml  base_ppo.yaml  base_sac.yaml  base_supervised.yaml  base_vae.yaml  env.yaml
configs/: train_sac.yaml
datasets/: READMe.md
docker/: docker-compose.yaml
documentation/: idea.md
envs/: forward_distribution.ipynb  plane_robot_env.py
latent/: __main__.py
logger/: base_logger.py  fs_logger.py
process/: base_process.py  learning_process.py
project/: __init__.py  __main__.py  entrypoint.py
rl/: __main__.py
supervised/: data.py  inference.py  loss.py  model.py  smoothness.ipynb  train.py  utils.py
test/: test_buffer.py  test_replay_buffer.py  test_rollout_buffer.py  test_target_sampling.py
utils/: cuda.py  decorator.py  file_system.py  kinematics.py  learning_process.py  logging_level.py  metrics.py  parser.py  plot.py  sampling.py
vae/: AE.ipynb  README.md  inference.py  train.py
(+176 files in other folders)
